--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Steller landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="description" content="Explore the professional world of Babynaaz">
+    <meta name="author" content="Babynaaz">
     <title>Babynaaz</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
