--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Explore the professional world of Babynaaz">
+    <meta name="description" content="Explore the professional world of Cost & Management Accountant with Babynaaz, I’m a CMA (Cost & Management Accountant) by profession. Currently working in a US based company Zeeco">
     <meta name="author" content="Babynaaz">
     <title>Babynaaz</title>
     <!-- font icons -->
