--- a/public_html/index.html
+++ b/public_html/index.html
@@ -170,7 +170,7 @@
                         <i class="ti-email"></i>
                         <div class="mb-0">
                             <h5>Email Address</h5>
-                            <p>mail@babynaaz.com</p>
+                            <p>mailto:mail@babynaaz.com</p>
                         </div>
                     </div>
                 </div>                  
