--- a/public_html/index.html
+++ b/public_html/index.html
@@ -152,26 +152,29 @@
                     </form>
                 </div>
                 <div class="contact-infos">
-                    <div class="item">
-                        <i class="ti-location-pin"></i>
-                        <div class="">
-                            <h5>Location</h5>
-                            <p> Mumbai, India</p>
-                        </div>                          
-                    </div>
-                    <div class="item">
-                        <i class="ti-mobile"></i>
-                        <div>
-                            <h5>Phone Number</h5>
-                            <p>+91 8108824202</p>
-                        </div>                          
-                    </div>
-                    <div class="item">
-                        <i class="ti-email"></i>
-                        <div class="mb-0">
-                            <h5>Email Address</h5>
-                            <p>mailto:mail@babynaaz.com</p>
-                        </div>
+    <div class="item">
+        <i class="ti-location-pin"></i>
+        <div class="">
+            <h5>Location</h5>
+            <p>Mumbai, India</p>
+        </div>
+    </div>
+    <div class="item">
+        <i class="ti-mobile"></i>
+        <div>
+            <h5>Phone Number</h5>
+            <p>+91 8108824202</p>
+        </div>
+    </div>
+    <div class="item">
+        <i class="ti-email"></i>
+        <div class="mb-0">
+            <h5>Email Address</h5>
+            <p><a href="mailto:mail@babynaaz.com">mail@babynaaz.com</a></p>
+        </div>
+    </div>
+</div>
+
                     </div>
                 </div>                  
             </div>
