--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="infos">
             <h6 class="subtitle">Hello, I'm</h6>
-            <h6 class="title">Babynazz Qazi</h6>
+            <h6 class="title">Babynaaz Qazi</h6>
             <p>Cost Management Account</p>
 
             <div class="buttons pt-3">
