--- a/public_html/index.html
+++ b/public_html/index.html
@@ -48,7 +48,7 @@
 
             <div class="buttons pt-3">
                 <a href="https://www.linkedin.com/in/babynaaz-qazi-964226150/" target="_blank" class="btn btn-primary rounded">LinkedIn</a>
-                <a href="https://d35hr0os3yc7ki.cloudfront.net/Babynaaz/Babynaaz_CV_as_on_12-01-2023.pdf" target="_blank" class="btn btn-dark rounded">Download CV</a>
+                <a href="https://d35hr0os3yc7ki.cloudfront.net/Babynaaz/QBN%20Resume_2.pdf" target="_blank" class="btn btn-dark rounded">Download CV</a>
             </div>      
         </div>
         <div class="img-holder">
@@ -87,7 +87,7 @@
                     <p class="subtitle">Cost Management Account</p>
                     <p>Dedicated and detail-oriented Project Controller with 5+ years of experience in accounting tasks such as Project Finance Control, Treasury Management, Banking Operations, Project Accounting, , Internal Control and Audit across Manufacturing and Infrastructure industry.</p>
                     <p>Previously, I have worked as an Intern at Shekhar Joshi & Co. for 6 months. It was an amazing experience as it taught me a lot of things and as a reward to the same, I used to handle cost audit for a few clients.</p>
-                    <a href="https://d35hr0os3yc7ki.cloudfront.net/Babynaaz/Babynaaz_CV_as_on_12-01-2023.pdf"download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>                   
+                    <a href="https://d35hr0os3yc7ki.cloudfront.net/Babynaaz/QBN%20Resume_2.pdf"download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>                   
                 </div>
             </div>
         </div>
